cluster/gitops/monitoring/victoria-metrics/logs/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
spec:
  hostnames:
    - vm-logs.${SECRET_PUBLIC_DOMAIN_NAME}
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: vmauth-victoria-logs
          port: 9428
      matches:
        - path:
            type: PathPrefix
            value: /select/vmui
        - path:
            type: PathPrefix
            value: /select/logsql
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
            path:
              type: ReplaceFullPath
              replaceFullPath: /select/vmui/?
